# exam-kit

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
config/: config.yml
config/templates/markdown/: pdf_main.md.j2  section.md.j2
config/templates/prompts/: compare.j2  definition.j2  derivation.j2  fast_revision.j2  mistakes.j2
config/templates/typst/: main.typ  theme.typ
examkit/: __init__.py  cli.py  config.py  logging_utils.py
examkit/asr/: __init__.py  whisper_runner.py
examkit/ingestion/: __init__.py  exam_parser.py  ingest.py  ocr.py  slides_parser.py  transcript_normalizer.py
examkit/nlp/: __init__.py  embeddings.py  retrieval.py  spacy_nlp.py  splitter.py  topic_mapping.py
examkit/qa/: __init__.py  checks.py
examkit/render/: __init__.py  pandoc_renderer.py  templater.py  typst_renderer.py
examkit/reports/: __init__.py  coverage.py  export.py
examkit/synthesis/: __init__.py  citations.py  composer.py  diagrams.py  ollama_client.py  prompts.py
examkit/utils/: __init__.py  io_utils.py  math_utils.py  text_utils.py  timecode.py
input/sample/: manifest.json
input/sample/exam/: README.md
input/sample/slides/: README.md
input/sample/topics/: exam_topics.yml  session_topics.yml
input/sample/transcript/: sample.vtt
input/sample/video/: README.md
tests/: __init__.py  test_ingestion.py  test_parsers.py  test_render.py  test_topic_mapping.py
